<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/imageWrapper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bgs">
        <ImageView
            android:id="@+id/rocket"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search"
            android:src="@drawable/rocket"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/rocket"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/searchbg"
            android:id="@+id/search"
            android:hint="@string/search"
            android:ellipsize="start"
            android:gravity="center"
            android:textColor="#FFF"
            android:textColorHint="@color/light"
            android:textSize="14sp"
            android:textCursorDrawable="@null"
            android:clickable="true"
            />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.TabLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/bgs"
        app:layout_constraintTop_toBottomOf="@id/imageWrapper"
        app:tabIndicatorColor="@color/lighter"
        app:tabSelectedTextColor="@color/lighter"
        app:tabTextColor="@color/light">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upcoming" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved"/>
    </android.support.design.widget.TabLayout>
    <android.support.v4.view.ViewPager
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/tablayout"
        android:id="@+id/pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</android.support.constraint.ConstraintLayout>