<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10sp"
    android:layout_marginRight="10sp"
    android:layout_marginLeft="10sp"
    android:layout_marginBottom="10sp"
    android:id="@+id/stat"
    app:layout_constraintTop_toBottomOf="@id/essential">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/bgs"
            android:text="@string/number_of_cores"
            android:id="@+id/ncw"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_of_cores"
            app:layout_constraintStart_toEndOf="@id/ncw"
            android:text="10"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/number_of_cores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/bgs"
            android:text="text: "
            android:id="@+id/cnw"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/cnw"
            app:layout_constraintTop_toBottomOf="@id/ncw"
            android:id="@+id/cores_names"
            android:text="flacon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/npw"
            android:textStyle="bold"
            android:textColor="@color/bgs"
            app:layout_constraintTop_toBottomOf="@id/cores_names"
            android:text="@string/number_of_payloads"
            />
        <TextView
            android:id="@+id/payloads_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/npw"
            app:layout_constraintTop_toBottomOf="@id/cores_names"
            android:text="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pnw"
            android:textStyle="bold"
            android:textColor="@color/bgs"
            android:text="text: "
            app:layout_constraintTop_toBottomOf="@id/payloads_number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/payloads_ids"
            app:layout_constraintStart_toEndOf="@id/pnw"
            app:layout_constraintTop_toBottomOf="@id/payloads_number"
            android:text="FalconSAT-2"/>
        <TextView
            android:id="@+id/sfdw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/bgs"
            app:layout_constraintEnd_toStartOf="@id/static_fire_date"
            android:text="@string/static_fire_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/static_fire_date"
            android:textColor="@color/four"
            android:text="2016-09-12"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/lsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bgs"
            android:textStyle="bold"
            android:text="@string/launch_success"
            app:layout_constraintTop_toBottomOf="@id/sfdw"
            app:layout_constraintEnd_toStartOf="@id/launch_success"/>
        <TextView
            android:id="@+id/launch_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sfdw"
            android:text="yes"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>