<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10sp"
    android:layout_marginRight="10sp"
    android:layout_marginLeft="10sp"
    android:layout_marginBottom="10sp"
    android:id="@+id/essential"
    app:layout_constraintBottom_toTopOf="@+id/cp">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp">
        <TextView
            android:layout_marginLeft="10sp"
            android:id="@+id/misw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission_name"
            android:textStyle="bold"
            android:textColor="@color/bgs"
            app:layout_constraintStart_toEndOf="@id/missionimage"
            app:layout_constraintBottom_toTopOf="@id/datew"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/missionname"
            app:layout_constraintStart_toEndOf="@id/misw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mission"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/datew"/>
        <TextView
            android:layout_marginLeft="10sp"
            app:layout_constraintTop_toBottomOf="@id/missionname"
            app:layout_constraintBottom_toTopOf="@id/rocketnw"
            app:layout_constraintStart_toEndOf="@id/missionimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datew"
            android:text="@string/launch_date"
            android:textStyle="bold"
            android:textColor="@color/bgs"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/missionname"
            app:layout_constraintStart_toEndOf="@id/datew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/launchdate"
            android:textColor="@color/four"
            android:text="mission date"
            app:layout_constraintBottom_toTopOf="@id/rocketnw"
            />
        <TextView
            android:id="@+id/rocketnw"
            android:layout_marginLeft="10sp"
            app:layout_constraintStart_toEndOf="@id/missionimage"
            android:textStyle="bold"
            android:textColor="@color/bgs"
            app:layout_constraintTop_toBottomOf="@id/launchdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rocket_name"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rocket_name"
            app:layout_constraintStart_toEndOf="@id/rocketnw"
            app:layout_constraintTop_toBottomOf="@id/launchdate"
            android:text="rocket name"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="10sp"
            android:id="@+id/missionimage"
            android:src="@drawable/loadro"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"/>
        <ImageButton
            android:id="@+id/star"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/starsicon"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>